--- a/src/public/frontend/css/templatemo-style.css
+++ b/src/public/frontend/css/templatemo-style.css
@@ -151,7 +151,6 @@ a{
             transition: all 0.3s 1s ease-out;
 }
 /* end Preloader */
-
 body { overflow-x: hidden; }
 ul { 
   margin: 0; 
@@ -160,7 +159,8 @@ ul {
 * { font-family: 'Open Sans', sans-serif; }
 .container { max-width: 960px;}
 .height-header {min-height: 980px;}
-.tm-handwriting-font { font-family: 'Damion', cursive; }
+.tm-handwriting-font { font-family: 'Dancing Script', cursive; }
+.fontPacifico{font-family: 'Pacifico', cursive;}
 .tm-top-header {
   background: black;
   color: white;
@@ -172,11 +172,15 @@ ul {
  .tm-site-name {
   vertical-align: bottom;
 }
+.tm-site-logo{
+  margin-right: 10px;
+  margin-bottom: 5px;
+}
 .tm-site-name {
   color: #c79c60;
   display: inline-block;
   font-size: 32px;
-  margin: 0 10px;  
+  margin: 5px 0;  
 }
 .tm-logo-container { padding: 10px 0; }
 .tm-nav {
@@ -468,11 +472,13 @@ ul {
 .tm-popular-item {
   background: url(../img/popular-item-bg.png) no-repeat;
   background-size: 100% 100%;
-  max-width: 294px;
+  width: 294px;
+  min-height: 411px;
   margin-top: 30px;  
   margin-bottom: 80px;
 }
-.tm-popular-item-img { margin-left: 3px; }
+.tm-popular-item-img { margin-left: 3px;width: 97.35%; height: 165px;}
+.tm-popular-item-img-wrap{ height: 166px; width: 100%;}
 .tm-popular-items-container {
   display: -webkit-box;
   display: -webkit-flex;
@@ -492,6 +498,8 @@ ul {
   padding: 0 30px 60px;
   position: relative;
   text-align: center;
+  min-height: 245px;
+  margin-top: 30px;
 }
 .tm-popular-item-title,
 .order-now-link {
@@ -525,7 +533,7 @@ ul {
   text-decoration: none;
 }
 .tm-popular-item-title {
-  font-size: 34px;
+  font-size: 2em;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -635,7 +643,7 @@ ol li:before {
           align-items: flex-end;
 }
 /*http://stackoverflow.com/questions/1032914/how-to-make-a-div-to-fill-a-remaining-horizontal-space-a-very-simple-but-annoyi*/
-.tm-section-header { width: 350px; }
+.tm-section-header { min-width: 350px; display: flex; align-items: center;}
 .tm-hr-container {
   width: 100%;
   height: 41px;
