--- a/src/views/frontend/menu.handlebars
+++ b/src/views/frontend/menu.handlebars
@@ -7,7 +7,7 @@
         <p class="tm-welcome-description">
           Tóm lại cafe ngon không nói nhiều nhé
         </p>
-        <a href="#" class="tm-more-button margin-top-30">Read More</a>
+        <a href="#" class="tm-more-button margin-top-30">Xem thêm</a>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 tm-welcome-img-container">
         <div class="inline-block shadow-img">
@@ -18,7 +18,7 @@
     <section class="tm-section row relative" id="list-products-height">
       <div class="col-lg-12 tm-section-header-container margin-bottom-30">
         <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
-            class="tm-site-logo"> Our Menus</h2>
+            class="tm-site-logo">Menu</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
         </div>
