--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -13,6 +13,14 @@ http://www.templatemo.com/tm-466-cafe-house
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700' rel='stylesheet'
     type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Damion' rel='stylesheet' type='text/css'>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+
   <link href="frontend/css/bootstrap.min.css" rel="stylesheet">
   <link href="frontend/css/font-awesome.min.css" rel="stylesheet">
   <link href="frontend/css/all.css" rel="stylesheet">
@@ -182,7 +190,7 @@ http://www.templatemo.com/tm-466-cafe-house
         <p class="gray-text tm-welcome-description">
           Cafe House chuyên cung cấp các thức uống về cafe ! Ngon bổ rẻ ba la ba la vân vân và mây mây....
         </p>
-        <a href="#main" class="tm-more-button tm-more-button-welcome">Details</a>
+        <a href="#main" class="tm-more-button tm-more-button-welcome">Chi tiết</a>
       </div>
       {{/if}}
       {{#if showSingInUp}}
@@ -200,17 +208,17 @@ http://www.templatemo.com/tm-466-cafe-house
       <div class="container">
         <div class="row margin-bottom-60">
           <nav class="col-lg-3 col-md-3 tm-footer-nav tm-footer-div">
-            <h3 class="tm-footer-div-title">Main Menu</h3>
+            <h3 class="tm-footer-div-title">Menu chính</h3>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Directory</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Our Services</a></li>
+              <li><a href="#">Trang chủ</a></li>
+              <li><a href="#">Về chúng tôi</a></li>
+              <li><a href="#">Menu ngày</a></li>
+              <li><a href="#">Menu</a></li>
+              <li><a href="#">Tài khoản</a></li>
             </ul>
           </nav>
           <div class="col-lg-5 col-md-5 tm-footer-div">
-            <h3 class="tm-footer-div-title">About Us</h3>
+            <h3 class="tm-footer-div-title">Về chúng tôi</h3>
             <p class="margin-top-15">
               Chúng tôi là cafe Trung Nguyên nguyên chất 99,99%
             </p>
@@ -219,7 +227,7 @@ http://www.templatemo.com/tm-466-cafe-house
             </p>
           </div>
           <div class="col-lg-4 col-md-4 tm-footer-div">
-            <h3 class="tm-footer-div-title">Get Social</h3>
+            <h3 class="tm-footer-div-title">Liên hệ</h3>
             <p>Liên hệ chúng tôi qua các hình thức sau</p>
             <div class="tm-social-icons-container">
               <a href="#" class="tm-social-icon"><i class="fab fa-facebook-f"></i></a>
