--- a/src/views/backend/categories.handlebars
+++ b/src/views/backend/categories.handlebars
@@ -1,47 +1,83 @@
 <main>
     <div class="container-fluid px-4">
         <h1 class="mt-4">Danh mục</h1>
-        <a href="#" class="btn btn-success" style="width: 200px;margin-bottom: 50px;">Thêm danh mục</a>
-
-        <div class="card mb-4">
-
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+        <div class="bootstrap-modal">
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicModal">Basic
+                modal</button>
+            <!-- Modal -->
+            <div class="modal fade" id="basicModal">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Modal title</h5>
+                            <button type="button" class="close" data-dismiss="modal"><span>&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">Modal body text goes here.</div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-4" style="margin-top: 100px;">
             <div class="card-body">
                 <table id="datatablesSimple">
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Age</th>
-                            <th>Start date</th>
-                            <th>Action</th>
+                            <th>created_at</th>
+                            <th>updated_at</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tfoot>
                         <tr>
                             <th>Name</th>
-                            <th>Position</th>
-                            <th>Office</th>
-                            <th>Age</th>
-                            <th>Start date</th>
-                            <th>Salary</th>
+                            <th>created_at</th>
+                            <th>updated_at</th>
+                            <th></th>
                         </tr>
                     </tfoot>
                     <tbody>
+                        {{#each category}}
                         <tr>
-                            <td>Donna Snider</td>
-                            <td>Customer Support</td>
-                            <td>New York</td>
-                            <td>27</td>
-                            <td>2011/01/25</td>
+                            <td>{{this.name}}</td>
+                            <td>{{this.createdAt}}</td>
+                            <td>{{this.updatedAt}}</td>
                             <td>
                                 <a href="" class="btn btn-info">Edit</a>
                                 <a href="" class="btn btn-danger">Delete</a>
                             </td>
                         </tr>
+                        {{/each}}
                     </tbody>
                 </table>
             </div>
+        </div>
+    </div>
+    {{!-- modal --}}
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Some text in the modal.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
         </div>
     </div>
 </main>
