--- a/src/views/layouts/admin-layout.handlebars
+++ b/src/views/layouts/admin-layout.handlebars
@@ -10,6 +10,9 @@
     <title>{{title}}</title>
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
         crossorigin="anonymous"></script>
 </head>
@@ -67,9 +70,9 @@
                             data-bs-parent="#sidenavAccordion">
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="/admin/category">Danh mục sản phẩm</a>
-                                <a class="nav-link" href="layout-sidenav-light.html">Sản phẩm</a>
-                                <a class="nav-link" href="layout-static.html">Đơn hàng</a>
-                                <a class="nav-link" href="layout-static.html">Khách hàng</a>
+                                <a class="nav-link" href="/admin/product">Sản phẩm</a>
+                                <a class="nav-link" href="/admin/order">Đơn hàng</a>
+                                <a class="nav-link" href="/admin/customer">Khách hàng</a>
                                 <a class="nav-link" href="layout-static.html">Bài viết</a>
                                 <a class="nav-link" href="layout-static.html">Mails</a>
                             </nav>
@@ -131,9 +134,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
+    {{!--
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    --}}
+    {{!--
     <script src="assets/demo/chart-area-demo.js"></script>
-    <script src="assets/demo/chart-bar-demo.js"></script>
+    <script src="assets/demo/chart-bar-demo.js"></script> --}}
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
     <script src="js/datatables-simple-demo.js"></script>
 </body>
