--- a/src/views/frontend/home.handlebars
+++ b/src/views/frontend/home.handlebars
@@ -11,13 +11,13 @@
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 tm-welcome-img-container">
         <div class="inline-block shadow-img">
-          <img src="frontend/img/1.jpg" alt="Image" class="img-circle img-thumbnail">
+          <img src="/frontend/img/1.jpg" alt="Image" class="img-circle img-thumbnail">
         </div>
       </div>
     </section>
     <section class="tm-section tm-section-margin-bottom-0 row">
       <div class="col-lg-12 tm-section-header-container">
-        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
+        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="/frontend/img/logo.png" alt="Logo"
             class="tm-site-logo">Nổi bật</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
@@ -29,7 +29,7 @@
     </section>
     <section class="tm-section row">
       <div class="col-lg-12 tm-section-header-container">
-        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
+        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="/frontend/img/logo.png" alt="Logo"
             class="tm-site-logo">Hôm nay xem gì ?</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
@@ -40,7 +40,7 @@
           <!-- left -->
           <div class="tm-special-item">
             <div class="tm-special-img-container">
-              <img src="frontend/img/special-1.jpg" alt="Special" class="tm-special-img img-responsive">
+              <img src="/frontend/img/special-1.jpg" alt="Special" class="tm-special-img img-responsive">
               <a href="#">
                 <div class="tm-special-description">
                   <h3 class="tm-special-title">Donec pede justo</h3>
@@ -55,7 +55,7 @@
           <div>
             <div class="tm-special-item">
               <div class="tm-special-img-container">
-                <img src="frontend/img/special-2.jpg" alt="Special" class="img-responsive">
+                <img src="/frontend/img/special-2.jpg" alt="Special" class="img-responsive">
                 <a href="#">
                   <div class="tm-special-description">
                     <h3 class="tm-special-title">Etiam sit amet</h3>
@@ -68,7 +68,7 @@
           <div class="tm-special-container-lower">
             <div class="tm-special-item">
               <div class="tm-special-img-container">
-                <img src="frontend/img/special-3.jpg" alt="Special" class="img-responsive">
+                <img src="/frontend/img/special-3.jpg" alt="Special" class="img-responsive">
                 <a href="#">
                   <div class="tm-special-description">
                     <p>Vivamus elementum</p>
@@ -78,7 +78,7 @@
             </div>
             <div class="tm-special-item">
               <div class="tm-special-img-container">
-                <img src="frontend/img/special-4.jpg" alt="Special" class="img-responsive">
+                <img src="/frontend/img/special-4.jpg" alt="Special" class="img-responsive">
                 <a href="#">
                   <div class="tm-special-description">
                     <p>Quisque rutrum.</p>
@@ -93,7 +93,7 @@
     <section class="tm-section">
       <div class="row">
         <div class="col-lg-12 tm-section-header-container">
-          <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
+          <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="/frontend/img/logo.png" alt="Logo"
               class="tm-site-logo">Nay có gì ngon ?</h2>
           <div class="tm-hr-container">
             <hr class="tm-hr">
@@ -103,7 +103,7 @@
       <div class="row">
         <div class="tm-daily-menu-container margin-top-60">
           <div class="col-lg-4 col-md-4">
-            <img src="frontend/img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">
+            <img src="/frontend/img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">
           </div>
           <div class="col-lg-8 col-md-8">
             <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
