--- a/src/views/frontend/menu.handlebars
+++ b/src/views/frontend/menu.handlebars
@@ -11,13 +11,13 @@
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 tm-welcome-img-container">
         <div class="inline-block shadow-img">
-          <img src="frontend/img/1.jpg" alt="Image" class="img-circle img-thumbnail">
+          <img src="/frontend/img/1.jpg" alt="Image" class="img-circle img-thumbnail">
         </div>
       </div>
     </section>
     <section class="tm-section row relative" id="list-products-height">
       <div class="col-lg-12 tm-section-header-container margin-bottom-30">
-        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
+        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="/frontend/img/logo.png" alt="Logo"
             class="tm-site-logo">Menu</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
@@ -34,7 +34,7 @@
                 {{!--
               </form> --}}
             </nav>
-            <img src="frontend/img/vertical-menu-bg.png" alt="Menu bg" class="tm-side-menu-bg">
+            <img src="/frontend/img/vertical-menu-bg.png" alt="Menu bg" class="tm-side-menu-bg">
           </div>
         </div>
         <div class="tm-menu-product-content col-lg-9 col-md-9" id="listProducts">
