--- a/src/views/frontend/today-special.handlebars
+++ b/src/views/frontend/today-special.handlebars
@@ -2,7 +2,7 @@
   <div class="container" id="main">
     <section class="tm-section tm-section-margin-bottom-0 row">
       <div class="col-lg-12 tm-section-header-container">
-        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
+        <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="/frontend/img/logo.png" alt="Logo"
             class="tm-site-logo">Nổi bật</h2>
         <div class="tm-hr-container">
           <hr class="tm-hr">
@@ -15,7 +15,7 @@
     <section class="tm-section">
       <div class="row">
         <div class="col-lg-12 tm-section-header-container">
-          <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="frontend/img/logo.png" alt="Logo"
+          <h2 class="tm-section-header gold-text tm-handwriting-font"><img src="/frontend/img/logo.png" alt="Logo"
               class="tm-site-logo">Nay có gì ngon</h2>
           <div class="tm-hr-container">
             <hr class="tm-hr">
@@ -25,7 +25,7 @@
       <div class="row">
         <div class="tm-daily-menu-container margin-top-60">
           <div class="col-lg-4 col-md-4">
-            <img src="frontend/img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">
+            <img src="/frontend/img/menu-board.png" alt="Menu board" class="tm-daily-menu-img">
           </div>
           <div class="col-lg-8 col-md-8">
             <p>Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
