--- a/src/views/frontend/signup.handlebars
+++ b/src/views/frontend/signup.handlebars
@@ -21,6 +21,9 @@
                         <div class="form-text waring">Email is not valid</div>
                         {{/if_equal}}
                         {{/each}}
+                        {{#if errorEmail}}
+                            <div class="form-text waring">Email already used</div>
+                        {{/if}}
                     </div>
                     <div class="form-group">
                         <label for="pass"><i class="fas fa-lock icon-singin"></i></label>
