--- a/src/views/frontend/signup.handlebars
+++ b/src/views/frontend/signup.handlebars
@@ -27,7 +27,7 @@
                     </div>
                     <div class="form-group">
                         <label for="pass"><i class="fas fa-lock icon-singin"></i></label>
-                        <input type="password" name="pass" id="pass" placeholder="Password" />
+                        <input type="password" name="pass" id="pass" placeholder="Password" pattern="^[a-zA-Z0-9]+$" title="Password contains only letters and numbers"/>
                         {{#each alert}}
                         {{#if_equal param "pass"}}
                         <div class="form-text waring">Password is not valid</div>
@@ -36,7 +36,7 @@
                     </div>
                     <div class="form-group">
                         <label for="re_pass"><i class="fas fa-lock icon-singin"></i></label>
-                        <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" />
+                        <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password" pattern="^[a-zA-Z0-9]+$" title="Password contains only letters and numbers" />
                         {{!-- {{#each alert}}
                         {{#if_equal param "re_pass"}}
                         <div class="form-text waring">Password Comfirm is not valid</div>
