--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -50,7 +50,7 @@
               <li><a href="/today-special" class="{{#if todayspecial  }} active {{/if}}">Today Special</a></li>
               <li><a href="/menu" class="{{#if menu }} active {{/if}}">Menu</a></li>
               <li><a href="/contact" class="{{#if contact }} active {{/if}}">Contact</a></li>
-              <li><a href="/sign-in"><i class="fas fa-user icon"></i></a></li>
+              <li><a href="/sign-in"><i class="fas fa-user icon"></i></a>Hi, </li>
             </ul>
           </nav>
           {{/if}}
