--- a/src/public/frontend/css/style.css
+++ b/src/public/frontend/css/style.css
@@ -90,12 +90,11 @@ h2 {
 .height-singup{
   min-height: 1100px;
 }
-.container-form {
+.container-form, .container-form_profile {
   position: absolute;
   top:25%;
   left: 50%;
   transform: translate(-50%,-25%);
-  width: 600px;
   background: rgb(255, 255, 255);
   margin: 0 auto;
   box-shadow: 0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05);
@@ -108,6 +107,36 @@ h2 {
   -webkit-border-radius: 20px;
   -o-border-radius: 20px;
   -ms-border-radius: 20px; }
+.container-form_profile{
+  width: 950px;
+  margin-top: 150px;
+  padding-top: 20px;
+}
+.container-form{
+  width: 600px;
+}
+.profile-content{
+  text-align: center;
+}
+#form-profile{
+  /* width: 75%; */
+  margin: 0 auto;
+}
+#form-profile_info{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 10px;
+}
+#form-profile_info > div{
+  flex-grow: 1;
+  padding: 0 30px
+}
+.btnUpdate{
+  margin: 0 auto;
+  margin: 10px 0 20px 0;
+}
 .icon-singin{
   font-size: 24px!important;
 }
