--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -50,7 +50,7 @@
               <li><a href="/today-special" class="{{#if todayspecial  }} active {{/if}}">Today Special</a></li>
               <li><a href="/menu" class="{{#if menu }} active {{/if}}">Menu</a></li>
               <li><a href="/contact" class="{{#if contact }} active {{/if}}">Contact</a></li>
-              <li><a href="/sign-in"><i class="fas fa-user icon"></i></a>Hi, </li>
+              <li><a href="/sign-in"><i class="fas fa-user icon"></i> {{#if user.isExist}} Hi, {{user.user.name}}{{else}}Đăng nhập{{/if}}</a></li>
             </ul>
           </nav>
           {{/if}}
@@ -66,7 +66,7 @@
         <img src="/frontend/img/light.png" alt="Light" class="light light-2">
         <img src="/frontend/img/light.png" alt="Light" class="light light-3">
       </div>
-      {{#if singinup}}
+      {{#if showHeaderContent}}
       <div class="row tm-welcome-content">
         <h2 class="white-text tm-handwriting-font tm-welcome-header"><img src="/frontend/img/header-line.png" alt="Line"
             class="tm-header-line">&nbsp;Welcome To&nbsp;&nbsp;<img src="/frontend/img/header-line.png" alt="Line"
